environments/dev/kubernetes/services/payments/payout-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payout-processor
  labels:
    app: payout-processor
    env: dev
  namespace: payments
spec:
  replicas: 0
  selector:
    matchLabels:
      app: payout-processor
  revisionHistoryLimit: 1
  template:
    metadata:
      name: payout-processor
      labels:
        env: dev
        app: payout-processor
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: payout-processor
        image: steblynskyi-docker.jfrog.io/payments-payout-processor:8fb3871
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 6000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: payout-processor
  namespace: payments
  labels:
    Domain: payments-payout-processor.dev-steblynskyi.com
spec:
  selector:
    app: payout-processor
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 6000
    protocol: TCP
  type: NodePort
