environments/dev/kubernetes/services/payments/public-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
  labels:
    app: public-api
    env: dev
  namespace: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: public-api
      labels:
        env: dev
        app: public-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: public-api
        image: steblynskyi-docker.jfrog.io/payments-public-api:ed64aa1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 352Mi
        ports:
        - containerPort: 6001
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: public-api
  namespace: payments
  labels:
    Domain: payments-public-api.dev-steblynskyi.com
spec:
  selector:
    app: public-api
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 6001
    protocol: TCP
  type: NodePort
