environments/dev/kubernetes/services/payments/reports-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-web
  labels:
    app: reports-web
    env: dev
  namespace: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reports-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: reports-web
      labels:
        env: dev
        app: reports-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: reports-web
        image: steblynskyi-docker.jfrog.io/payments-reports-web:f6e7b30
        imagePullPolicy: Always
        args:
        - -base-path=/reports/payments
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: reports-web
  namespace: payments
  labels:
    Domain: payments-reports-web.dev-steblynskyi.com
spec:
  selector:
    app: reports-web
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  type: NodePort
