environments/dev/kubernetes/services/payments/statement-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-statement-api
  labels:
    app: payments-statement-api
    env: dev
  namespace: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments-statement-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: payments-statement-api
      labels:
        env: dev
        app: payments-statement-api
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: payments-statement-api
        image: steblynskyi-docker.jfrog.io/payments-statement-api:2abd1703
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 6001
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: payments-statement-api
  namespace: payments
  labels:
    Domain: payments-statement-api.dev-steblynskyi.com
spec:
  selector:
    app: payments-statement-api
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 6001
    protocol: TCP
  type: NodePort
