environments/dev/kubernetes/services/payments/test-agent-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-agent-api
  labels:
    app: test-agent-api
    env: dev
  namespace: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-agent-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: test-agent-api
      labels:
        env: dev
        app: test-agent-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: test-agent-api
        image: steblynskyi-docker.jfrog.io/payments-test-agent-api:77cbcf4
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: test-agent-api
  namespace: payments
  labels:
    Domain: payments-test-agent-api.dev-steblynskyi.com
spec:
  selector:
    app: test-agent-api
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 3000
    protocol: TCP
  type: NodePort
