environments/dev/kubernetes/services/payments/webhook-testing-tool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-testing-tool
  labels:
    app: webhook-testing-tool
    env: dev
  namespace: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webhook-testing-tool
  revisionHistoryLimit: 1
  template:
    metadata:
      name: webhook-testing-tool
      labels:
        env: dev
        app: webhook-testing-tool
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: webhook-testing-tool
        image: steblynskyi-docker.jfrog.io/payments-webhook-testing-tool:ed64aa1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6001
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: webhook-testing-tool
  namespace: payments
  labels:
    Domain: payments-webhook-testing-tool.dev-steblynskyi.com
spec:
  selector:
    app: webhook-testing-tool
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 6001
    protocol: TCP
  type: NodePort
